tests/fail/0007_oper_tparam.ec
type 'a t.

op o1 ['a] : 'a t -> int.

op o [] ('a t: 'a t -> int.
